@startuml class_diagram
!theme plain
skinparam classAttributeIconSize 0
title Profiles & Connect Requests - Data Model

class profiles {
  +id : uuid <<PK>>
  first_name : text
  last_name : text
  age : int
  is_indigenous : boolean
  participation_categories : text[]
  city : text
  province : text
  treaty_area : text
  bio : text
  faith_tradition : text
  faith_tradition_other : text
  language_preferences : text[]
  participation_format : text[]
  interests : text[]
  role : text  // participant | facilitator
}

class connections {
  +id : uuid <<PK>>
  match_id : uuid <<nullable FK>>
  participant_a_id : uuid <<FK>>
  participant_b_id : uuid <<FK>>
  participant_a_connected : boolean
  participant_b_connected : boolean
  connected_at : timestamptz
  status : text  // pending | pending_review | active
  created_at : timestamptz
}

class notifications {
  +id : uuid <<PK>>
  user_id : uuid <<FK>>
  type : text  // connect_request | ...
  title : text
  body : text
  data : jsonb  // { connection_id }
  read : boolean
  created_at : timestamptz
}

profiles "1" -- "0..*" connections : participant_a_id >
profiles "1" -- "0..*" connections : participant_b_id >
profiles "1" -- "0..*" notifications : user_id >
connections "1" ..> "0..*" notifications : data.connection_id
@enduml
